tests/snapshots/trace_solver__spanshot_request@1041191736520720417.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    rules_display_style: Plain
  bundle_name: ~
  request: "[x]: &&mut [T]"
---
[x] @ p: &&mut [T]
// Applying rule `ConstructorMultiRef`
[x] @ &**p: &[T]
// Applying rule `ConstructorRef`
x @ &(*&**p).0: &T
// Applying rule `Binding`
let x: &T = &(*&**p).0

// Final bindings (simplified):
let x: &T = &(**p).0;
